# transcribe-meetings

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  cli.py  config.py  pipeline.py  summarizer.py  transcriber.py
tests/: __init__.py  test_summarization.py
